<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/bg_gradient">

    <FrameLayout
        android:id="@+id/padContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="22dp"
        android:background="@drawable/pill_bg"
        android:gravity="center"
        android:paddingVertical="14dp"
        android:text="@string/gesture_hint"
        android:textColor="@color/text_primary"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="22dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/gesture_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/gesture_clear" />
    </LinearLayout>
</FrameLayout>
